# AutoPdfAnalysis

./: .gitignore  AGENT_GUIDE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
output/: 2509.22170v1.txt  2509.22170v1_analysis.md  Lumine.txt  Lumine_analysis.md  PORTAL.txt  PORTAL_analysis.md  UltraRag.txt  UltraRag_analysis.md  UltraRag_dynamic_kb.md  UltraRag_knowledge_adaptation.md  UltraRag_repo_vs_paper_changes.md  all_pdfs_analysis_summary.md
prompts/: analysis_prompts.md
src/: md_to_pdf.py  pdf_tools.py
