[project]
name = "auto-pdf-analysis"
version = "0.1.0"
description = "Agent-guided PDF analysis tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pypdf>=3.0.0",
    "markdown>=3.4",
    "reportlab>=4.0",
    "requests>=2.0",
    "xhtml2pdf>=0.2.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["src/**", "README.md", "pyproject.toml", "docs/**", "prompts/**", "output/**"]
